# robotic_platform

./: CMakeLists.txt  README.md  package.xml
include/: node_base.hpp  planner_base.hpp  tf_broadcaster.hpp
include/elevation/: fold_elevator_driver.hpp
include/manager/: manager.hpp
include/manipulation/: planner_base.hpp  poses_loader.hpp
include/manipulation/action_planner/: action_planner.hpp
include/manipulation/collision_planner/: collision_planner.hpp
include/manipulation/end_effector_ctrl/: finger_gripper.hpp  vacuum_gripper.hpp  vacuum_gripper_ctlr.hpp  vacuum_gripper_status.hpp
include/manipulation/motion_planner/: motion_planner.hpp
include/manipulation/workflow_planner/: workflow_planner.hpp
include/vision_server/: vision_server.hpp
launch/: manipulation.launch.py
params/: collision_objects.yaml  collision_planner_config.yaml
src/: main.cpp  node_base.cpp  planner_base.cpp  platform_server.cpp  tf_broadcaster.cpp
src/elevation/: fold_elevator_driver.cpp  impl.cpp  utils.cpp
src/manager/: execution.cpp  main.cpp  manager.cpp  pick.cpp  place.cpp  utils.cpp
src/manager/action_server/: new_order.cpp
src/manipulation/: main.cpp  node_base.cpp  planner_base.cpp
src/manipulation/action_planner/: action_planner.cpp
src/manipulation/action_planner/service_server/: plan.cpp
src/manipulation/collision_planner/: collision_planner.cpp
src/manipulation/end_effector_ctrl/: finger_gripper.cpp  vacuum_gripper.cpp  vacuum_gripper_ctlr.cpp
src/manipulation/motion_planner/: finger_gripper_impl.cpp  motion.cpp  motion_impl.cpp  motion_planner.cpp  utils.cpp  vac_gripper_impl.cpp
src/manipulation/workflow_planner/: transformation.cpp  utils.cpp  workflow_planner.cpp
src/manipulation/workflow_planner/action_server/: dual_arm_pick_up.cpp  pick.cpp  pick_up.cpp  place.cpp  replenish.cpp  scan_sku.cpp
src/manipulation/workflow_planner/service_server/: operation.cpp
src/manipulation/workflow_planner/strategy/: elevation.cpp  pick.cpp  place.cpp  scan.cpp
src/vision_server/: vision_server.cpp
